more styling done

--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,24 @@
   text-align: center;
 }
 
+body{
+  background-image: url("https://i0.wp.com/images-prod.healthline.com/hlcmsresource/images/AN_images/healthy-eating-ingredients-1296x728-header.jpg?w=1155&h=1528");
+  background-size: cover;
+  width: 100%;
+}
+
 h1 {
   font-family: 'Rokkitt', serif;
 }
 
 h2 {
   font-family: 'Rokkitt', serif;
+}
+
+.welcome-box{
+  background-color: white;
+  padding-bottom: 20px;
+  margin-top: 80px;
 }
 
 .App-header {
