--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,53 @@ img {
 /* .rest-profile-info{
   background-color: teal;
 } */
+#profile-rest-btn{
+  margin-bottom: 20px;
+}
+
+#profile-info-box {
+  overflow: scroll;
+}
+
+.footer {
+  position: initial;
+  padding-top: 20px;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 55px;
+  background-color:#f1935c;
+  color: white;
+  text-align: center;
+}
+
+#github:link {
+  color: white;
+}
+
+#github:visited {
+  color: white;
+}
+
+#review-dividers{
+  margin-top: 30px;
+  
+}
+
+#submit-area {
+  width: 500px;
+  height: 80px;
+  resize: none;
+}
+
+.review-submit-btn{
+  background-color: white;
+  border-color: orange;
+  text-align: center;
+  color: orange;
+  padding: 16px 32px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 10%;
+}
